[metadata]
name            = bscan_tools
author          = Tom Verbeure, Benedek Racz
author-email    = benedek.racz@propatria-inc.com
summary         = JTAG boundary scan related tools.
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3.6
project_urls =
    Source Code = https://github.com/tomverbeure/bscan_tools
license = BSD
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    BSDL, PCB, boundary-scan

[flake8]
    exclude = proto,
    max-line-length = 100
    ignore =
      # E402: Module level import not at top of the file
      E402,
      # E722 do not use bare 'except'
      E722
